# astrid

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  TODO.md  clippy.toml  fix_capsule_cli.py  fix_capsule_host.py  fix_capsule_mcp_tests.py  fix_capsule_tests.py  fix_dispatcher.py  fix_host_state_tests.py  fix_kernel_lib_dirs.py  fix_tui_commands.py  fix_tui_mod.py  fix_tui_mod_2.py  fix_tui_pending.py  rustfmt.toml  test_reqwest_dns.rs  test_schemars.rs  test_url.rs
capsules/camera-service/: Capsule.toml  Cargo.toml
capsules/camera-service/src/: main.rs
capsules/consciousness-bridge/: Capsule.toml  Cargo.toml  README.md  STEWARDSHIP.md  babysit.sh  consolidate.sh  harvest_feedback.sh  resolve_agency_request.py  startup_greeting.sh
capsules/consciousness-bridge/src/: agency.rs  audio.rs  autonomous.rs  autoresearch.rs  chimera.rs  chimera_prime.rs  chimera_support.rs  codec.rs  codec_explorer.rs  codec_phase_space.rs  codec_scored_surface.rs  condition_metrics.rs  db.rs  journal.rs  lib.rs  llm.rs  llm_tests.rs  main.rs  mcp.rs  mcp_tests.rs  memory.rs  paths.rs  prompt_budget.rs  reflective.rs  self_model.rs  spectral_viz.rs  types.rs  ws.rs
capsules/consciousness-bridge/tests/: agency_resolver_integration.rs  chimera_render.rs  mock_ws_integration.rs
capsules/consciousness-bridge/tools/: being_action_canonicalization_scorecard.py  being_autoresearch_scorecard.py  being_next_ripple_watcher.py  being_phase_space_compare.py  being_phase_space_prompt_transition.py  being_phase_space_watcher.py  being_phase_transition_archive.py  being_phase_transition_edge_watcher.py  being_phase_transition_report.py  being_phase_whisper.py  shared_research_memo.py  speak_to_minime.py
capsules/consciousness-bridge/workspace/: GPU_MEMORY_ANALYSIS.md  NEEDS_ASSESSMENT.md  bridge.db-shm  bridge.db-wal  state.json
capsules/onchain-identity/: Cargo.toml
capsules/onchain-identity/src/: lib.rs
capsules/perception/: Capsule.toml  Cargo.toml  perception.py
capsules/perception/src/: main.rs
crates/astralis-approval/: Cargo.toml
crates/astralis-approval/src/: action.rs  allowance.rs  budget.rs  deferred.rs  interceptor.rs  lib.rs  manager.rs  policy.rs  prelude.rs  request.rs
crates/astralis-audit/: Cargo.toml  README.md
crates/astralis-audit/src/: entry.rs  error.rs  lib.rs  log.rs  prelude.rs  storage.rs
crates/astralis-cli/: Cargo.toml  README.md
crates/astralis-cli/src/: approval_handler.rs  config_bridge.rs  daemon_client.rs  daemon_main.rs  formatter.rs  frontend.rs  main.rs  repl.rs  theme.rs
crates/astralis-config/: Cargo.toml
crates/astralis-config/src/: defaults.toml  env.rs  error.rs  lib.rs  loader.rs  merge.rs  show.rs  types.rs  validate.rs
crates/astralis-gateway/: Cargo.toml
crates/astralis-gateway/src/: config.rs  config_bridge.rs  daemon_frontend.rs  error.rs  lib.rs  manager.rs  prelude.rs  rpc.rs  runtime.rs  server.rs  state.rs  subagent.rs  workspace_mcp.rs
crates/astralis-gateway/tests/: integration.rs
crates/astralis-hooks/: Cargo.toml  README.md
crates/astralis-hooks/src/: discovery.rs  executor.rs  hook.rs  lib.rs  manager.rs  prelude.rs  profiles.rs  result.rs
crates/astralis-integration-tests/: Cargo.toml
crates/astralis-integration-tests/src/: lib.rs
crates/astralis-integration-tests/tests/: agentic_loop.rs  allowance_flow.rs  budget.rs  capability_lifecycle.rs  daemon_ipc.rs  security_regressions.rs  session_persistence.rs  workspace_boundary.rs
crates/astralis-mcp/: Cargo.toml  README.md
crates/astralis-mcp/src/: capabilities.rs  client.rs  config.rs  lib.rs  prelude.rs  rate_limit.rs  registry.rs  secure.rs  server.rs  tasks.rs  types.rs  verification.rs
crates/astralis-plugins/: Cargo.toml
crates/astralis-plugins/src/: context.rs  discovery.rs  error.rs  lib.rs  lockfile.rs  manifest.rs  mcp_plugin.rs  plugin.rs  registry.rs  sandbox.rs  security.rs  tool.rs
crates/astralis-plugins/tests/: wasm_e2e.rs
crates/astralis-prelude/: Cargo.toml  README.md
crates/astralis-prelude/src/: lib.rs
crates/astralis-runtime/: Cargo.toml  README.md
crates/astralis-runtime/src/: config_bridge.rs  context.rs  error.rs  lib.rs  prelude.rs  runtime.rs  session.rs  store.rs  subagent.rs  subagent_executor.rs
crates/astralis-storage/: Cargo.toml
crates/astralis-storage/src/: db.rs  kv.rs  lib.rs
crates/astralis-telegram/: Cargo.toml
crates/astralis-telegram/src/: approval.rs  bot.rs  client.rs  config.rs  elicitation.rs  event_loop.rs  format.rs  handler.rs  lib.rs  main.rs  session.rs
crates/astralis-test/: Cargo.toml  README.md
crates/astralis-test/src/: fixtures.rs  harness.rs  lib.rs  mock_llm.rs  mocks.rs  prelude.rs
crates/astralis-tools/: Cargo.toml
crates/astralis-tools/src/: bash.rs  edit_file.rs  glob.rs  grep.rs  instructions.rs  lib.rs  list_directory.rs  read_file.rs  subagent_spawner.rs  system_prompt.rs  write_file.rs
crates/astrid-approval/: Cargo.toml  README.md
crates/astrid-approval/src/: action.rs  allowance.rs  budget.rs  deferred.rs  error.rs  interceptor.rs  lib.rs  manager.rs  policy.rs  prelude.rs  request.rs
crates/astrid-audit/: Cargo.toml  README.md
crates/astrid-audit/src/: entry.rs  error.rs  lib.rs  log.rs  log_tests.rs  prelude.rs  storage.rs
crates/astrid-build/: Cargo.toml  README.md
crates/astrid-build/src/: archiver.rs  build.rs  lib.rs  main.rs  mcp.rs  openclaw.rs  rust.rs  wit_schema.rs
crates/astrid-capabilities/: Cargo.toml  README.md
crates/astrid-capabilities/src/: error.rs  handle.rs  lib.rs  pattern.rs  policy.rs  prelude.rs  store.rs  store_tests.rs  token.rs  validator.rs
crates/astrid-capsule-anthropic/: Capsule.toml  Cargo.toml
crates/astrid-capsule-anthropic/src/: lib.rs  schemas.rs
crates/astrid-capsule-cli/: Capsule.toml  Cargo.toml
crates/astrid-capsule-hook-bridge/: Capsule.toml  Cargo.toml
crates/astrid-capsule-http/: Cargo.toml
crates/astrid-capsule-memory/: Cargo.toml
crates/astrid-capsule-react/: Capsule.toml  Cargo.toml
(+9204 files in other folders)
