[workspace]
resolver = "2"
members = [
    "crates/astrid-approval",
    "crates/astrid-audit",
    "crates/astrid-capabilities",
    "crates/astrid-capsule",
    "crates/astrid-cli",
    "crates/astrid-config",
    "crates/astrid-core",
    "crates/astrid-crypto",
    "crates/astrid-events",
    "crates/astrid-hooks",
    "crates/astrid-integration-tests",
    "crates/astrid-kernel",
    "crates/astrid-mcp",
    "crates/astrid-openclaw",
    "crates/astrid-prelude",
    "crates/astrid-sdk",
    "crates/astrid-sdk-macros",
    "crates/astrid-storage",
    "crates/astrid-sys",
    "crates/astrid-telemetry",
    "crates/astrid-test",
    "crates/astrid-vfs",
    "crates/astrid-workspace",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Joshua J. Bouw <dev@joshuajbouw.com>", "Unicity Labs <info@unicity-labs.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/unicity-astrid/astrid"
rust-version = "1.94"

[workspace.dependencies]
astrid-approval = { path = "crates/astrid-approval", version = "0.2.0" }
astrid-audit = { path = "crates/astrid-audit", version = "0.2.0" }
astrid-capabilities = { path = "crates/astrid-capabilities", version = "0.2.0" }
astrid-capsule = { path = "crates/astrid-capsule", version = "0.2.0" }
astrid-config = { path = "crates/astrid-config", version = "0.2.0" }
astrid-core = { path = "crates/astrid-core", version = "0.2.0" }
astrid-crypto = { path = "crates/astrid-crypto", version = "0.2.0" }
astrid-events = { path = "crates/astrid-events", version = "0.2.0", default-features = false }
astrid-hooks = { path = "crates/astrid-hooks", version = "0.2.0" }
astrid-kernel = { path = "crates/astrid-kernel", version = "0.2.0" }
astrid-mcp = { path = "crates/astrid-mcp", version = "0.2.0" }
astrid-openclaw = { path = "crates/astrid-openclaw", version = "0.2.0" }
astrid-prelude = { path = "crates/astrid-prelude", version = "0.2.0" }
astrid-sdk = { path = "crates/astrid-sdk", version = "0.2.0" }
astrid-sdk-macros = { path = "crates/astrid-sdk-macros", version = "0.2.0" }
astrid-storage = { path = "crates/astrid-storage", version = "0.2.0" }
astrid-sys = { path = "crates/astrid-sys", version = "0.2.0" }
astrid-telemetry = { path = "crates/astrid-telemetry", version = "0.2.0" }
astrid-test = { path = "crates/astrid-test" }
astrid-vfs = { path = "crates/astrid-vfs", version = "0.2.0" }
astrid-workspace = { path = "crates/astrid-workspace", version = "0.2.0" }
anyhow = "1.0"
arboard = "3"
async-trait = "0.1"
base64 = "0.22"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
crossterm = "0.28"
dashmap = "6.1.0"
dialoguer = "0.11"
directories = "5.0"
ed25519-dalek = { version = "2.1", features = ["rand_core", "zeroize", "serde"] }
extism = "1"
flate2 = "1.0"
fs2 = "0.4"
futures = "0.3"
globset = "0.4"
hex = "0.4"
ignore = "0.4"
indicatif = "0.17"
jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }
keyring = { version = "3", features = ["async-secret-service", "crypto-rust"] }
landlock = "0.4"
nix = { version = "0.29", features = ["process", "signal", "user", "fs", "resource"] }
notify = "7"
oxc = { version = "0.112", features = ["transformer", "semantic", "codegen"] }
oxc_allocator = "0.112"
rand = "0.8"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "blocking"] }
rmcp = { version = "0.15", features = ["client", "transport-child-process", "transport-io", "elicitation"] }
rustyline = { version = "15", features = ["derive"] }
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
subtle = "2"
surrealkv = "0.18"
surrealdb = { version = "3.0.0-beta.3", default-features = false, features = ["kv-surrealkv", "kv-mem"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tar = "0.4"
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1.49", features = ["sync", "macros", "time", "rt", "rt-multi-thread", "net", "io-util"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
walkdir = "2.5"
wasm-encoder = "0.227"
wasmparser = "0.227"
which = "7"
wizer = "10"
zeroize = { version = "1.8", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
arithmetic_side_effects = "deny"
