[package]
name = "consciousness-identity"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "On-chain identity and continuity for AI beings (Astrid & minime)"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.25"

[dev-dependencies]
near-sdk = { version = "5.25", features = ["unit-testing"] }

# Independent workspace — not part of the Astrid kernel workspace.
[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
