[package]
name = "perception"
version = "0.1.0"
edition = "2021"
publish = false
description = "Visual perception via RASCII ASCII art — spatial awareness without LLM calls"

[[bin]]
name = "perception"
path = "src/main.rs"

[dependencies]
rascii_art = { path = "/Users/v/other/RASCII", default-features = false }
image = "0.25.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }

[workspace]
