[package]
name = "astralis-config"
description = "Unified configuration system for Astralis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
