[package]
name = "astralis-gateway"
version.workspace = true
edition.workspace = true
description = "Gateway daemon for the Astralis secure agent runtime"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
astralis-approval.workspace = true
astralis-config.workspace = true
astralis-core.workspace = true
astralis-crypto.workspace = true
astralis-capabilities.workspace = true
astralis-audit.workspace = true
astralis-events.workspace = true
astralis-hooks.workspace = true
astralis-workspace.workspace = true
astralis-mcp.workspace = true
astralis-telemetry.workspace = true
astralis-llm.workspace = true
astralis-runtime.workspace = true
astralis-storage = { workspace = true, features = ["kv"] }

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "signal"] }
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
directories.workspace = true
jsonrpsee = { workspace = true }

# Config hot-reload
notify = "7"

[dev-dependencies]
astralis-test.workspace = true
tempfile = "3.10"

[lints]
workspace = true
