[package]
name = "astralis-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hook system for Astralis secure agent runtime SDK"

[dependencies]
astralis-core.workspace = true
astralis-plugins.workspace = true
astralis-storage.workspace = true
extism.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "time", "sync", "rt"] }
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
globset.workspace = true
toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3.10"

[lints]
workspace = true
