[package]
name = "astralis-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
astralis-core.workspace = true
astralis-crypto.workspace = true
astralis-capabilities.workspace = true
astralis-audit.workspace = true
astralis-mcp.workspace = true
astralis-llm.workspace = true
astralis-runtime.workspace = true
astralis-approval.workspace = true
astralis-workspace.workspace = true
astralis-tools.workspace = true
astralis-test.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
serde_json.workspace = true
futures.workspace = true
chrono.workspace = true

[lints]
workspace = true
