[package]
name = "astralis-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Plugin trait and registry for the Astralis secure agent runtime SDK"

[dependencies]
astralis-core.workspace = true
astralis-crypto.workspace = true
astralis-mcp.workspace = true
astralis-storage.workspace = true

rmcp.workspace = true
which.workspace = true
extism.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tracing.workspace = true
uuid.workspace = true
toml.workspace = true
async-trait.workspace = true

# Optional dependencies behind feature flags
reqwest = { workspace = true, optional = true }
astralis-approval = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock.workspace = true

[features]
http = ["dep:reqwest"]
approval = ["dep:astralis-approval"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3.10"

[lints]
workspace = true
