[package]
name = "astralis-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Agent runtime with sessions, context management, and orchestration for Astralis"

[dependencies]
# Internal
astralis-core = { workspace = true }
astralis-config = { workspace = true }
astralis-crypto = { workspace = true }
astralis-capabilities = { workspace = true }
astralis-audit = { workspace = true }
astralis-mcp = { workspace = true }
astralis-llm = { workspace = true }
astralis-approval = { workspace = true }
astralis-hooks = { workspace = true }
astralis-telemetry = { workspace = true }
astralis-workspace = { workspace = true }
astralis-storage = { workspace = true }
astralis-tools = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Time & IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Encoding
hex = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"

[lints]
workspace = true
