[package]
name = "astralis-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Unified storage layer for Astralis — SurrealKV (raw KV) and SurrealDB (query engine)"

[features]
default = []
# Enable SurrealKV raw key-value store
kv = ["dep:surrealkv"]
# Enable SurrealDB full query engine (graph, document, SurrealQL)
db = ["dep:surrealdb"]
# Enable both
full = ["kv", "db"]

[dependencies]
# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Storage backends (optional)
surrealkv = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3.10"

[lints]
workspace = true
