[package]
name = "astralis-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared test utilities for Astralis secure agent runtime SDK"

[dependencies]
astralis-core.workspace = true
astralis-llm.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tempfile = "3.10"
uuid.workspace = true
chrono.workspace = true

[lints]
workspace = true
