[package]
name = "astralis-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Built-in coding tools for the Astralis agent runtime"

[dependencies]
# Internal
astralis-llm = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# File matching
globset = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"

[lints]
workspace = true
