[package]
name = "astrid-approval"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Approval system for Astrid secure agent runtime - types, allowances, and security policy"

[dependencies]
astrid-audit = { workspace = true }
astrid-capabilities = { workspace = true }
astrid-core = { workspace = true }
astrid-crypto = { workspace = true }
astrid-storage = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
globset = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }

[lints]
workspace = true
