[package]
name = "astrid-build"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Astrid capsule build tooling - compiles and packages capsules"

[lib]
name = "astrid_build"
path = "src/lib.rs"

[[bin]]
name = "astrid-build"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
astrid-openclaw = { workspace = true }
cargo_metadata = "0.23.1"
clap = { workspace = true }
extism = { workspace = true }
flate2 = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
toml_edit = "0.25.3"
tracing = { workspace = true }

[dev-dependencies]
astrid-capsule = { workspace = true }

[lints]
workspace = true
