[package]
name = "astrid-capsule-anthropic"
version = "0.1.0"
edition = "2024"
description = "Anthropic LLM provider capsule for Astrid OS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { path = "../astrid-sdk", features = ["derive"] }
astrid-events = { path = "../astrid-events", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
extism-pdk = "1.4.1"
uuid = { version = "1.13", features = ["v4", "serde"] }
