[package]
name = "astrid-capsule-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true, features = ["derive"] }
astrid-events = { workspace = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
extism-pdk = "1.4.1"
